# basic-python-project

./: .pre-commit-config.yaml  README.md  pyproject.toml
basic_python_project/: app.py
my_app/: app.py
test/: test_app.py
