[tool.poetry]
name = "basic-python-project"
version = "0.1.0"
description = "A sample project example describing how python app is structured"
authors = ["Tautvydas Petkus <tautvydas.petkus@telesofas.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"
click = "^8.0.4"
flask = "^2.0.3"
flask-restx = "^0.5.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
